--- a/css/estilos.css
+++ b/css/estilos.css
@@ -302,6 +302,7 @@ ul {
 .menu-icon {
     width: 28px;
     margin-left: 20px;
+    display: none;
 }
 
 /*---------- Mediaquery para el menu ----------*/
