Agregando buscador a la pagina productos

--- a/views/productos.html
+++ b/views/productos.html
@@ -44,6 +44,7 @@
 
     <div class="row row-2">
         <h2>Todos los productos</h2>
+        <input type="search" class="searchBar" placeholder="Buscar producto">
         <select>
             <option>Default sorting</option>
             <option>Precio de menor al mayor</option>
