--- a/css/estilos.css
+++ b/css/estilos.css
@@ -342,6 +342,16 @@ select:focus {
     color: #fff;
 }
 
+.searchBar {
+    display: inline-block;
+    border: 1px solid #ff523b;
+    margin-left: 10px;
+    width: 400px;
+    height: 30px;
+    text-align: center;
+}
+
+
 /*---------- Detalles de productos ----------*/
 
 .single-product {
