Agregue productos, carpetas de para ordenar y arregle las rutas de busqueda

--- a/views/productos/zapatillas/zapatillas-negras.html
+++ b/views/productos/zapatillas/zapatillas-negras.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos | lFie store</title>
+    <title>Zapatillas negras HRX | lFie store</title>
 
 <!------ Google fonts ------>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,26 +16,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
 <!------ CSS ------>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../../../css/estilos.css">
 
 </head>
 <body>
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="../assets/img/logo.png" alt="logo" width="125px">
+                    <img src="../../../assets/img/logo.png" alt="logo" width="125px">
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="productos.html">Productos</a></li>
+                        <li><a href="../../../index.html">Inicio</a></li>
+                        <li><a href="../../productos.html">Productos</a></li>
                         <li><a href="">Sobre nosotros</a></li>
                         <li><a href="">Contacto</a></li>
                         <li><a href="">Cuenta</a></li>
                     </ul>
                 </nav>
-                <img src="../assets/img/cart.png" alt="" width="30px" height="30px">
-                <img src="../assets/img/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
+                <img src="../../../assets/img/cart.png" alt="" width="30px" height="30px">
+                <img src="../../../assets/img/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
             </div>
         </div>
 
@@ -45,20 +45,20 @@
 <div class="small-container single-product">
     <div class="row">
         <div class="col-2">
-            <img src="../assets/img/gallery-1.jpg" alt="" width="100%" id="productImg">
+            <img src="../../../assets/img/product-2.jpg" alt="" width="100%" id="productImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="../assets/img/gallery-1.jpg" alt="" class="smallImg">
+                        <img src="../../../assets/img/product-2.jpg" alt="" class="smallImg">
                     </div>
                     <div class="small-img-col">
-                        <img src="../assets/img/gallery-2.jpg" alt="" class="smallImg">
+                        <img src="../../../assets/img/product-2.jpg" alt="" class="smallImg">
                     </div>
                     <div class="small-img-col">
-                        <img src="../assets/img/gallery-3.jpg" alt="" class="smallImg">
+                        <img src="../../../assets/img/product-2.jpg" alt="" class="smallImg">
                     </div>
                     <div class="small-img-col">
-                        <img src="../assets/img/gallery-4.jpg" alt="" class="smallImg">
+                        <img src="../../../assets/img/product-2.jpg" alt="" class="smallImg">
                     </div>
                 </div>
 
@@ -69,16 +69,16 @@
 
         </div>
         <div class="col-2">
-            <p>Inicio / Remera</p>
-            <h1>Remera roja Puma</h1>
-            <h4>$2100</h4>
+            <p>Inicio / Zapatillas</p>
+            <h1>Zapatillas negras HRX</h1>
+            <h4>$21300</h4>
             <select required>
                 <option>Selecciona el talle</option>
-                <option>S</option>
-                <option>M</option>
-                <option>L</option>
-                <option>XL</option>
-                <option>XXL</option>
+                <option>38</option>
+                <option>39</option>
+                <option>40</option>
+                <option>41</option>
+                <option>42</option>
             </select>
             <input type="number" value="1" required>
             <a href="" class="btn">Añadir al carrito</a>
@@ -95,20 +95,19 @@
 
     <div class="row">
         <div class="col-4">
-            <img src="../assets/img/product-9.jpg" alt="">
-            <h4>Red printed</h4>
+            <img src="../../../assets/img/product-9.jpg" alt="">
+            <h4>Reloj con cronometro</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$13000</p>
         </div>
         <div class="col-4">
-            <img src="../assets/img/product-10.jpg" alt="">
-            <h4>Red printed</h4>
+            <img src="../../../assets/img/product-10.jpg" alt="">
+            <h4>Zapatillas camufladas HRX</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -116,33 +115,33 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$19800</p>
         </div>
         <div class="col-4">
-            <img src="../assets/img/product-11.jpg" alt="">
-            <h4>Red printed</h4>
+            <img src="../../../assets/img/product-11.jpg" alt="">
+            <h4>Zapatillas grises</h4>
             <div class="rating">
-                <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$18500</p>
         </div>
         <div class="col-4">
-            <img src="../assets/img/product-12.jpg" alt="">
-            <h4>Red printed</h4>
+            <img src="../../../assets/img/product-12.jpg" alt="">
+            <h4>Jogging negro Nike</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
+                <i class="fa-solid fa-star"></i>
             </div>
-            <p>$2100</p>
+            <p>$9300</p>
         </div>
     </div>
+
 
 </div>
 
@@ -154,19 +153,19 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-5">
-                    <img src="../assets/img/logo-godrej.png" alt="">
+                    <img src="../../../assets/img/logo-godrej.png" alt="">
                 </div>
                 <div class="col-5">
-                    <img src="../assets/img/logo-oppo.png" alt="">
+                    <img src="../../../assets/img/logo-oppo.png" alt="">
                 </div>
                 <div class="col-5">
-                    <img src="../assets/img/logo-coca-cola.png" alt="">
+                    <img src="../../../assets/img/logo-coca-cola.png" alt="">
                 </div>
                 <div class="col-5">
-                    <img src="../assets/img/logo-paypal.png" alt="">
+                    <img src="../../../assets/img/logo-paypal.png" alt="">
                 </div>
                 <div class="col-5">
-                    <img src="../assets/img/logo-philips.png" alt="">
+                    <img src="../../../assets/img/logo-philips.png" alt="">
                 </div>
             </div>
         </div>
@@ -180,12 +179,12 @@
                 <h3>Descarga nuestra App!</h3>
                 <p>Descargar App para Android y IOS mobile</p>
                 <div class="app-logo">
-                    <img src="../assets/img/play-store.png" alt="">
-                    <img src="../assets/img/app-store.png" alt="">
+                    <img src="../../../assets/img/play-store.png" alt="">
+                    <img src="../../../assets/img/app-store.png" alt="">
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="./assets/img/logo-white.png" alt="">
+                <img src="../../assets/img/logo-white.png" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quo optio perferendis expedita, veritatis dolores!</p>
             </div>
             <div class="footer-col-3">
@@ -212,7 +211,7 @@
     </div>
 </div>
 
-<script src="../js/menuDesplegable.js"></script>
+<script src="../../../js/menuDesplegable.js"></script>
 
 </body>
 </html>
