--- a/views/productos.html
+++ b/views/productos.html
@@ -56,7 +56,7 @@
 
     <div class="row">
         <div class="col-4">
-            <a href="remera-roja.html">
+            <a href="productos/remeras/remera-roja.html">
                 <img src="../assets/img/product-1.jpg" alt="" href="remera-roja.html">
             </a>
             <h4>Remera roja Puma</h4>
@@ -65,86 +65,39 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
             </div>
             <p>$2100</p>
         </div>
         <div class="col-4">
-            <img src="../assets/img/product-2.jpg" alt="">
-            <h4>Red printed</h4>
+            <a href="productos/zapatillas/zapatillas-negras.html">
+                <img src="../assets/img/product-2.jpg" alt="">
+            </a>
+            <h4>Zapatillas negras HRX</h4>
+            <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <p>$21300</p>
+        </div>
+        <div class="col-4">
+            <a href="productos/pantalones/jogging-gris-adidas.html">
+                <img src="../assets/img/product-3.jpg" alt="">
+            </a>
+            <h4>Jogging gris adidas</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$7800</p>
         </div>
         <div class="col-4">
-            <img src="../assets/img/product-3.jpg" alt="">
-            <h4>Red printed</h4>
-            <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <p>$2100</p>
-        </div>
-        <div class="col-4">
-            <img src="../assets/img/product-4.jpg" alt="">
-            <h4>Red printed</h4>
-            <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <p>$2100</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-4">
-            <img src="../assets/img/product-5.jpg" alt="">
-            <h4>Red printed</h4>
-            <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <p>$2100</p>
-        </div>
-        <div class="col-4">
-            <img src="../assets/img/product-6.jpg" alt="">
-            <h4>Red printed</h4>
-            <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <p>$2100</p>
-        </div>
-        <div class="col-4">
-            <img src="../assets/img/product-7.jpg" alt="">
-            <h4>Red printed</h4>
-            <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <p>$2100</p>
-        </div>
-        <div class="col-4">
-            <img src="../assets/img/product-8.jpg" alt="">
+            <a href="productos/remeras/chomba-puma.html">
+                <img src="../assets/img/product-4.jpg" alt="">
+            </a>
             <h4>Red printed</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -158,7 +111,9 @@
     </div>
     <div class="row">
         <div class="col-4">
-            <img src="../assets/img/product-9.jpg" alt="">
+            <a href="">
+                <img src="../assets/img/product-5.jpg" alt="">
+            </a>
             <h4>Red printed</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -170,7 +125,9 @@
             <p>$2100</p>
         </div>
         <div class="col-4">
-            <img src="../assets/img/product-10.jpg" alt="">
+            <a href="">
+                <img src="../assets/img/product-6.jpg" alt="">
+            </a>
             <h4>Red printed</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -182,7 +139,9 @@
             <p>$2100</p>
         </div>
         <div class="col-4">
-            <img src="../assets/img/product-11.jpg" alt="">
+            <a href="">
+                <img src="../assets/img/product-7.jpg" alt="">
+            </a>
             <h4>Red printed</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -194,7 +153,67 @@
             <p>$2100</p>
         </div>
         <div class="col-4">
-            <img src="../assets/img/product-12.jpg" alt="">
+            <a href="">
+                <img src="../assets/img/product-8.jpg" alt="">
+            </a>
+            <h4>Red printed</h4>
+            <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <p>$2100</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4">
+            <a href="">
+                <img src="../assets/img/product-9.jpg" alt="">
+            </a>
+            <h4>Red printed</h4>
+            <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <p>$2100</p>
+        </div>
+        <div class="col-4">
+            <a href="">
+                <img src="../assets/img/product-10.jpg" alt="">
+            </a>
+            <h4>Red printed</h4>
+            <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <p>$2100</p>
+        </div>
+        <div class="col-4">
+            <a href="">
+                <img src="../assets/img/product-11.jpg" alt="">
+            </a>
+            <h4>Red printed</h4>
+            <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <p>$2100</p>
+        </div>
+        <div class="col-4">
+            <a href="">
+                <img src="../assets/img/product-12.jpg" alt="">
+            </a>
             <h4>Red printed</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
