Creando todas las paginas de productos por separado

--- a/views/productos.html
+++ b/views/productos.html
@@ -98,7 +98,7 @@
             <a href="productos/remeras/chomba-puma.html">
                 <img src="../assets/img/product-4.jpg" alt="">
             </a>
-            <h4>Red printed</h4>
+            <h4>Chomba azul Puma</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -125,10 +125,10 @@
             <p>$2100</p>
         </div>
         <div class="col-4">
-            <a href="">
-                <img src="../assets/img/product-6.jpg" alt="">
+            <a href="../views/productos/buzos/sweater-wordis-rusty.html">
+                <img src="../assets/img/sweater-wordis-rusty.jpg" alt="">
             </a>
-            <h4>Red printed</h4>
+            <h4>Sweater wordis Rusty</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
