--- a/views/productos/pantalones/jogging-gris-adidas.html
+++ b/views/productos/pantalones/jogging-gris-adidas.html
@@ -70,7 +70,7 @@
         </div>
         <div class="col-2">
             <p>Inicio / Pantalones</p>
-            <h1>Jogging gris adidas</h1>
+            <h1>Jogging gris Adidas</h1>
             <h4>$7800</h4>
             <select required>
                 <option>Selecciona el talle</option>
@@ -94,7 +94,9 @@
 
     <div class="row">
         <div class="col-4">
-            <img src="../../../assets/img/product-9.jpg" alt="">
+            <a href="../accesorios/reloj-cronometro.html">
+                <img src="../../../assets/img/product-9.jpg" alt="">
+            </a>
             <h4>Reloj con cronometro</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -105,7 +107,9 @@
             <p>$13000</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-10.jpg" alt="">
+            <a href="../zapatillas/zapatillas-camufladas-hrx.html">
+                <img src="../../../assets/img/product-10.jpg" alt="">
+            </a>
             <h4>Zapatillas camufladas HRX</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -117,7 +121,9 @@
             <p>$19800</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-11.jpg" alt="">
+            <a href="../zapatillas/zapatillas-grises-roadster.html">
+                <img src="../../../assets/img/product-11.jpg" alt="">
+            </a>
             <h4>Zapatillas grises</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -128,7 +134,9 @@
             <p>$18500</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-12.jpg" alt="">
+            <a href="jogging-negro-nike.html">
+                <img src="../../../assets/img/product-12.jpg" alt="">
+            </a>
             <h4>Jogging negro Nike</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -141,7 +149,8 @@
         </div>
     </div>
 
-</div>
+
+</div
 
 
 
