--- a/views/productos/zapatillas/zapatillas-grises-hrx.html
+++ b/views/productos/zapatillas/zapatillas-grises-hrx.html
@@ -46,7 +46,6 @@
     <div class="row">
         <div class="col-2">
             <img src="../../../assets/img/product-5.jpg" alt="" width="100%" id="productImg">
-
                 <div class="small-img-row">
                     <div class="small-img-col">
                         <img src="../../../assets/img/product-5.jpg" alt="" class="smallImg">
@@ -95,7 +94,9 @@
 
     <div class="row">
         <div class="col-4">
-            <img src="../../../assets/img/product-9.jpg" alt="">
+            <a href="../accesorios/reloj-cronometro.html">
+                <img src="../../../assets/img/product-9.jpg" alt="">
+            </a>
             <h4>Reloj con cronometro</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -106,7 +107,9 @@
             <p>$13000</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-10.jpg" alt="">
+            <a href="zapatillas-camufladas-hrx.html">
+                <img src="../../../assets/img/product-10.jpg" alt="">
+            </a>
             <h4>Zapatillas camufladas HRX</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -118,7 +121,9 @@
             <p>$19800</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-11.jpg" alt="">
+            <a href="zapatillas-grises-roadster.html">
+                <img src="../../../assets/img/product-11.jpg" alt="">
+            </a>
             <h4>Zapatillas grises</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -129,7 +134,9 @@
             <p>$18500</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-12.jpg" alt="">
+            <a href="../pantalones/jogging-negro-nike.html">
+                <img src="../../../assets/img/product-12.jpg" alt="">
+            </a>
             <h4>Jogging negro Nike</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -143,7 +150,7 @@
     </div>
 
 
-</div>
+</div
 
 
 
