--- a/views/productos.html
+++ b/views/productos.html
@@ -85,7 +85,7 @@
             <a href="productos/pantalones/jogging-gris-adidas.html">
                 <img src="../assets/img/product-3.jpg" alt="">
             </a>
-            <h4>Jogging gris adidas</h4>
+            <h4>Jogging gris Adidas</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -106,87 +106,82 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$4300</p>
         </div>
     </div>
     <div class="row">
         <div class="col-4">
-            <a href="">
+            <a href="productos/zapatillas/zapatillas-grises-hrx.html">
                 <img src="../assets/img/product-5.jpg" alt="">
             </a>
-            <h4>Red printed</h4>
+            <h4>Zapatillas grises HRX</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$19800</p>
         </div>
         <div class="col-4">
-            <a href="../views/productos/buzos/sweater-wordis-rusty.html">
-                <img src="../assets/img/sweater-wordis-rusty.jpg" alt="">
+            <a href="productos/remeras/remera-negra-puma.html">
+                <img src="../assets/img/product-6.jpg" alt="">
             </a>
-            <h4>Sweater wordis Rusty</h4>
+            <h4>Remera negra Puma</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$2300</p>
         </div>
         <div class="col-4">
-            <a href="">
+            <a href="productos/accesorios/medias-hrx.html">
                 <img src="../assets/img/product-7.jpg" alt="">
             </a>
-            <h4>Red printed</h4>
+            <h4>Pack medias por 3 HRX</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$1700</p>
         </div>
         <div class="col-4">
-            <a href="">
+            <a href="productos/accesorios/reloj-negro-fossil.html">
                 <img src="../assets/img/product-8.jpg" alt="">
             </a>
-            <h4>Red printed</h4>
+            <h4>Reloj negro Fossil</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
+                <i class="fa-solid fa-star"></i>
             </div>
-            <p>$2100</p>
+            <p>$27900</p>
         </div>
     </div>
     <div class="row">
         <div class="col-4">
-            <a href="">
+            <a href="productos/accesorios/reloj-cronometro.html">
                 <img src="../assets/img/product-9.jpg" alt="">
             </a>
-            <h4>Red printed</h4>
+            <h4>Reloj con cronometro</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$13000</p>
         </div>
         <div class="col-4">
-            <a href="">
+            <a href="productos/zapatillas/zapatillas-camufladas-hrx.html">
                 <img src="../assets/img/product-10.jpg" alt="">
             </a>
-            <h4>Red printed</h4>
+            <h4>Zapatillas negras camufladas HRX</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -194,15 +189,14 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$19800</p>
         </div>
         <div class="col-4">
-            <a href="">
+            <a href="productos/zapatillas/zapatillas-grises-roadster.html">
                 <img src="../assets/img/product-11.jpg" alt="">
             </a>
-            <h4>Red printed</h4>
+            <h4>Zapatillas grises Roadster</h4>
             <div class="rating">
-                <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -211,18 +205,18 @@
             <p>$2100</p>
         </div>
         <div class="col-4">
-            <a href="">
+            <a href="productos/pantalones/jogging-negro-nike.html">
                 <img src="../assets/img/product-12.jpg" alt="">
             </a>
-            <h4>Red printed</h4>
+            <h4>Jogging negro Nike</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
+                <i class="fa-solid fa-star"></i>
             </div>
-            <p>$2100</p>
+            <p>$9300</p>
         </div>
     </div>
 
