--- a/views/productos/accesorios/medias-hrx.html
+++ b/views/productos/accesorios/medias-hrx.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zapatillas negras HRX | lFie store</title>
+    <title>Pack medias por 3 HRX | lFie store</title>
 
 <!------ Google fonts ------>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -92,7 +92,9 @@
 
     <div class="row">
         <div class="col-4">
-            <img src="../../../assets/img/product-9.jpg" alt="">
+            <a href="../accesorios/reloj-cronometro.html">
+                <img src="../../../assets/img/product-9.jpg" alt="">
+            </a>
             <h4>Reloj con cronometro</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -103,7 +105,9 @@
             <p>$13000</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-10.jpg" alt="">
+            <a href="../zapatillas/zapatillas-camufladas-hrx.html">
+                <img src="../../../assets/img/product-10.jpg" alt="">
+            </a>
             <h4>Zapatillas camufladas HRX</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -115,7 +119,9 @@
             <p>$19800</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-11.jpg" alt="">
+            <a href="../zapatillas/zapatillas-grises-roadster.html">
+                <img src="../../../assets/img/product-11.jpg" alt="">
+            </a>
             <h4>Zapatillas grises</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -126,7 +132,9 @@
             <p>$18500</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-12.jpg" alt="">
+            <a href="../pantalones/jogging-negro-nike.html">
+                <img src="../../../assets/img/product-12.jpg" alt="">
+            </a>
             <h4>Jogging negro Nike</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -140,7 +148,7 @@
     </div>
 
 
-</div>
+</div
 
 
 
