--- a/views/productos/accesorios/reloj-negro-fossil.html
+++ b/views/productos/accesorios/reloj-negro-fossil.html
@@ -87,7 +87,9 @@
 
     <div class="row">
         <div class="col-4">
-            <img src="../../../assets/img/product-9.jpg" alt="">
+            <a href="reloj-cronometro.html">
+                <img src="../../../assets/img/product-9.jpg" alt="">
+            </a>
             <h4>Reloj con cronometro</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -98,7 +100,9 @@
             <p>$13000</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-10.jpg" alt="">
+            <a href="../zapatillas/zapatillas-camufladas-hrx.html">
+                <img src="../../../assets/img/product-10.jpg" alt="">
+            </a>
             <h4>Zapatillas camufladas HRX</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -110,7 +114,9 @@
             <p>$19800</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-11.jpg" alt="">
+            <a href="../zapatillas/zapatillas-grises-roadster.html">
+                <img src="../../../assets/img/product-11.jpg" alt="">
+            </a>
             <h4>Zapatillas grises</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -121,7 +127,9 @@
             <p>$18500</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-12.jpg" alt="">
+            <a href="../pantalones/jogging-negro-nike.html">
+                <img src="../../../assets/img/product-12.jpg" alt="">
+            </a>
             <h4>Jogging negro Nike</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -135,7 +143,7 @@
     </div>
 
 
-</div>
+</div
 
 
 
