--- a/views/productos/remeras/remera-negra-puma.html
+++ b/views/productos/remeras/remera-negra-puma.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zapatillas negras HRX | lFie store</title>
+    <title>Remera roja Puma | lFie store</title>
 
 <!------ Google fonts ------>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,20 +45,20 @@
 <div class="small-container single-product">
     <div class="row">
         <div class="col-2">
-            <img src="../../../assets/img/sweater-wordis-rusty.jpg" alt="" width="100%" id="productImg">
+            <img src="../../../assets/img/product-6.jpg" alt="" width="100%" id="productImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="../../../assets/img/sweater-wordis-rusty.jpg" alt="" class="smallImg">
+                        <img src="../../../assets/img/product-6.jpg" alt="" class="smallImg">
                     </div>
                     <div class="small-img-col">
-                        <img src="../../../assets/img/sweater-wordis-rusty2.jpg" alt="" class="smallImg">
+                        <img src="../../../assets/img/product-6.jpg" alt="" class="smallImg">
                     </div>
                     <div class="small-img-col">
-                        <img src="../../../assets/img/sweater-wordis-rusty3.jpg" alt="" class="smallImg">
+                        <img src="../../../assets/img/product-6.jpg" alt="" class="smallImg">
                     </div>
                     <div class="small-img-col">
-                        <img src="../../../assets/img/sweater-wordis-rusty4.jpg" alt="" class="smallImg">
+                        <img src="../../../assets/img/product-6.jpg" alt="" class="smallImg">
                     </div>
                 </div>
 
@@ -69,16 +69,16 @@
 
         </div>
         <div class="col-2">
-            <p>Inicio / Zapatillas</p>
-            <h1>Zapatillas negras HRX</h1>
-            <h4>$21300</h4>
+            <p>Inicio / Remeras</p>
+            <h1>Remera negra Puma</h1>
+            <h4>$2300</h4>
             <select required>
                 <option>Selecciona el talle</option>
-                <option>38</option>
-                <option>39</option>
-                <option>40</option>
-                <option>41</option>
-                <option>42</option>
+                <option>S</option>
+                <option>M</option>
+                <option>L</option>
+                <option>XL</option>
+                <option>XXL</option>
             </select>
             <input type="number" value="1" required>
             <a href="" class="btn">Añadir al carrito</a>
@@ -95,7 +95,9 @@
 
     <div class="row">
         <div class="col-4">
-            <img src="../../../assets/img/product-9.jpg" alt="">
+            <a href="../accesorios/reloj-cronometro.html">
+                <img src="../../../assets/img/product-9.jpg" alt="">
+            </a>
             <h4>Reloj con cronometro</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -106,7 +108,9 @@
             <p>$13000</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-10.jpg" alt="">
+            <a href="../zapatillas/zapatillas-camufladas-hrx.html">
+                <img src="../../../assets/img/product-10.jpg" alt="">
+            </a>
             <h4>Zapatillas camufladas HRX</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -118,7 +122,9 @@
             <p>$19800</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-11.jpg" alt="">
+            <a href="../zapatillas/zapatillas-grises-roadster.html">
+                <img src="../../../assets/img/product-11.jpg" alt="">
+            </a>
             <h4>Zapatillas grises</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -129,7 +135,9 @@
             <p>$18500</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-12.jpg" alt="">
+            <a href="../pantalones/jogging-negro-nike.html">
+                <img src="../../../assets/img/product-12.jpg" alt="">
+            </a>
             <h4>Jogging negro Nike</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -143,7 +151,7 @@
     </div>
 
 
-</div>
+</div
 
 
 
