--- a/views/productos/remeras/remera-roja.html
+++ b/views/productos/remeras/remera-roja.html
@@ -95,20 +95,23 @@
 
     <div class="row">
         <div class="col-4">
-            <img src="../../../assets/img/product-9.jpg" alt="">
-            <h4>Red printed</h4>
+            <a href="../accesorios/reloj-cronometro.html">
+                <img src="../../../assets/img/product-9.jpg" alt="">
+            </a>
+            <h4>Reloj con cronometro</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$13000</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-10.jpg" alt="">
-            <h4>Red printed</h4>
+            <a href="../zapatillas/zapatillas-camufladas-hrx.html">
+                <img src="../../../assets/img/product-10.jpg" alt="">
+            </a>
+            <h4>Zapatillas camufladas HRX</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -116,35 +119,39 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$19800</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-11.jpg" alt="">
-            <h4>Red printed</h4>
+            <a href="../zapatillas/zapatillas-grises-roadster.html">
+                <img src="../../../assets/img/product-11.jpg" alt="">
+            </a>
+            <h4>Zapatillas grises</h4>
             <div class="rating">
-                <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-            <p>$2100</p>
+            <p>$18500</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-12.jpg" alt="">
-            <h4>Red printed</h4>
+            <a href="../pantalones/jogging-negro-nike.html">
+                <img src="../../../assets/img/product-12.jpg" alt="">
+            </a>
+            <h4>Jogging negro Nike</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
+                <i class="fa-solid fa-star"></i>
             </div>
-            <p>$2100</p>
+            <p>$9300</p>
         </div>
     </div>
 
-</div>
+
+</div
 
 
 
