--- a/views/productos/zapatillas/zapatillas-negras.html
+++ b/views/productos/zapatillas/zapatillas-negras.html
@@ -95,7 +95,9 @@
 
     <div class="row">
         <div class="col-4">
-            <img src="../../../assets/img/product-9.jpg" alt="">
+            <a href="../accesorios/reloj-cronometro.html">
+                <img src="../../../assets/img/product-9.jpg" alt="">
+            </a>
             <h4>Reloj con cronometro</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -106,7 +108,9 @@
             <p>$13000</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-10.jpg" alt="">
+            <a href="zapatillas-camufladas-hrx.html">
+                <img src="../../../assets/img/product-10.jpg" alt="">
+            </a>
             <h4>Zapatillas camufladas HRX</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -118,7 +122,9 @@
             <p>$19800</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-11.jpg" alt="">
+            <a href="zapatillas-grises-roadster.html">
+                <img src="../../../assets/img/product-11.jpg" alt="">
+            </a>
             <h4>Zapatillas grises</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -129,7 +135,9 @@
             <p>$18500</p>
         </div>
         <div class="col-4">
-            <img src="../../../assets/img/product-12.jpg" alt="">
+            <a href="../pantalones/jogging-negro-nike.html">
+                <img src="../../../assets/img/product-12.jpg" alt="">
+            </a>
             <h4>Jogging negro Nike</h4>
             <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -143,7 +151,7 @@
     </div>
 
 
-</div>
+</div
 
 
 
