--- a/views/productos.html
+++ b/views/productos.html
@@ -55,8 +55,8 @@
     </div>
 
 
-    <div class="row">
-        <div class="col-4 llamadoProductos">
+    <div class="row" id="producto-contenedor">
+        <!-- <div class="col-4 llamadoProductos">
             <a href="productos/remeras/remera-roja.html">
                 <img src="../assets/img/product-1.jpg" alt="" href="remera-roja.html">
             </a>
@@ -218,7 +218,7 @@
                 <i class="fa-solid fa-star"></i>
             </div>
             <p>$9300</p>
-        </div>
+        </div> -->
     </div>
 
 
